<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Your Own Adventure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start Traveling</string>
    <string name="title_activity_alley">Alley</string>
    <string name="text_message">You have ventured down a dark alley, where would you like to go next</string>
    <string name="text_button_go_left">Go Left</string>
    <string name="button_text_continue">Continue</string>
    <string name="button_text_go_right">Go Right</string>
    <string name="title_activity_room">Room</string>
    <string name="text_message_room">You have entered a room with two doors</string>
    <string name="text_button_enter_door_1">Enter Door 1</string>
    <string name="text_button_enter_door_2">Enter Door 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="title_win">You\'ve reached the gold!</string>
    <string name="title_lose">You\'ve fallen into pit of despair</string>
    <string name="title_activity_level_selection">Level_selection</string>
    <string name="txt_title_level_selection">Select a Difficulty</string>
    <string name="txt_btn_insane">Insane</string>
    <string name="txt_btn_hard">Hard</string>
    <string name="txt_btn_normal">Normal</string>
    <string name="txt_btn_easy">Easy</string>
    <string name="pref_username_title">UserName</string>
    <string name="pref_username_summary">Username for a personalized message</string>
    <string name="pref_category_customization">Customization</string>
    <string name="pref_win_message_title">Win Message</string>
    <string name="pref_lose_message_title">Lose Message</string>
    <string name="pref_lose_message_summary">Personalize the lose message</string>
    <string name="pref_win_message_summary">Personalize the win message</string>
    <string name="default_username">Player 1</string>

</resources>
