<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width ="match_parent"
    android:layout_height="match_parent"
    tools:context="co.mobilemakers.yourownadventure.Alley"
    android:padding="16dp">

    <TextView android:text="@string/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_message"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:id="@+id/alley_layout"
        android:paddingTop="8dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_go_left"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_continue"
            android:id="@+id/button3" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_go_right"
            android:id="@+id/button4" />
    </LinearLayout>

</LinearLayout>